Change app name

--- a/Ice_Quef/app.json
+++ b/Ice_Quef/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Ice_Queb",
-    "slug": "Ice_Queb",
+    "name": "Ice Queb",
+    "slug": "Ice Queb",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
