--- a/Ice_Quef/package.json
+++ b/Ice_Quef/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "format": "prettier --write src/ --config .prettierrc",
+    "lint": "eslint src/ --config .eslintrc.js"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.12",
