--- a/Ice_Quef/.eslintrc.json
+++ b/Ice_Quef/.eslintrc.json
@@ -1,9 +1,12 @@
-module.exports = {
+{
     "env": {
         "browser": true,
         "es2021": true
     },
-    "extends": "eslint:recommended",
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended"
+    ],
     "overrides": [
         {
             "env": {
@@ -21,6 +24,9 @@ module.exports = {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
+    "plugins": [
+        "react"
+    ],
     "rules": {
     }
 }
