--- a/Ice_Quef/package.json
+++ b/Ice_Quef/package.json
@@ -8,19 +8,20 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "format": "prettier --write src/ --config .prettierrc",
-    "lint": "eslint src/ --config .eslintrc.js"
+    "lint": "eslint src/ --config .eslintrc.json"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "expo": "~50.0.6",
+    "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-reanimated": "^3.7.0",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "expo-splash-screen": "~0.26.4"
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
