--- a/Ice_Quef/package.json
+++ b/Ice_Quef/package.json
@@ -29,7 +29,8 @@
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.2.61"
   },
   "private": true
 }
