--- a/Ice_Quef/package.json
+++ b/Ice_Quef/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "crypto-js": "^4.2.0",
     "expo": "~50.0.6",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
