--- a/Ice_Quef/package.json
+++ b/Ice_Quef/package.json
@@ -8,17 +8,21 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "format": "prettier --write src/ --config .prettierrc",
-    "lint": "eslint src/ --config .eslintrc.json"
+    "lint": "eslint src/ --config .eslintrc.json",
+    "test": "jest"
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "@testing-library/react-native": "^12.4.4",
     "crypto-js": "^4.2.0",
     "expo": "~50.0.6",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
+    "jest": "^29.3.1",
+    "jest-expo": "~50.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
@@ -32,5 +36,13 @@
     "@babel/core": "^7.20.0",
     "@types/react": "^18.2.61"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
+  },
+  "preset": "react-native",
+  "setupFiles": ["<rootDir>/src/jest/setup.js"]
 }
