--- a/Ice_Quef/package.json
+++ b/Ice_Quef/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
     "react-native-big-calendar": "^4.10.0",
+    "react-native-config": "^1.5.1",
     "react-native-reanimated": "^3.8.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
@@ -44,5 +45,7 @@
     ]
   },
   "preset": "react-native",
-  "setupFiles": ["<rootDir>/src/jest/setup.js"]
+  "setupFiles": [
+    "<rootDir>/src/jest/setup.js"
+  ]
 }
