--- a/Ice_Quef/config.json
+++ b/Ice_Quef/config.json
@@ -1,5 +1,5 @@
 {
     "server": {
-        "hostname": "https://95c8-68-118-249-49.ngrok-free.app"
+        "hostname": "https://98f6-128-119-202-117.ngrok-free.app"
     }
 }
