Changed title 'Statistics' to 'Information'

--- a/Ice_Quef/config.json
+++ b/Ice_Quef/config.json
@@ -1,5 +1,5 @@
 {
-    "server": {
-        "hostname": "https://98f6-128-119-202-117.ngrok-free.app"
-    }
+  "server": {
+    "hostname": "https://56af-128-119-202-93.ngrok-free.app"
+  }
 }
