--- a/Ice_Quef/config.json
+++ b/Ice_Quef/config.json
@@ -1,5 +1,5 @@
 {
   "server": {
-    "hostname": "https://56af-128-119-202-93.ngrok-free.app"
+    "hostname": "https://210c-68-118-249-49.ngrok-free.app"
   }
 }
