--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-reanimated": "^3.8.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -44,5 +45,7 @@
     ]
   },
   "preset": "react-native",
-  "setupFiles": ["<rootDir>/src/jest/setup.js"]
+  "setupFiles": [
+    "<rootDir>/src/jest/setup.js"
+  ]
 }
