--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "expo-status-bar": "~1.11.1",
     "jest": "^29.3.1",
     "jest-expo": "~50.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
     "react-native": "0.73.4",
     "react-native-big-calendar": "^4.10.0",
     "react-native-reanimated": "^3.8.0",
@@ -48,5 +48,26 @@
   "preset": "react-native",
   "setupFiles": [
     "<rootDir>/src/jest/setup.js"
-  ]
+  ],
+  "setupFilesAfterEnv": [
+    "@testing-library/jest-native/extend-expect"
+  ],
+  "peerDependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@types/react": "^17.0.0 || ^18.0.0",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@types/react": {
+      "optional": true
+    },
+    "@emotion/react": {
+      "optional": true
+    },
+    "@emotion/styled": {
+      "optional": true
+    }
+  }
 }
