--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "format": "prettier --write src/ --config .prettierrc",
-    "lint": "eslint src/ --config .eslintrc.json",
-    "test": "jest"
+    "lint": "eslint src/ --config .eslintrc.json"
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
@@ -34,40 +33,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@testing-library/react-native": "^12.4.5",
     "@types/react": "^18.2.61",
     "eslint-plugin-testing-library": "^6.2.2"
   },
   "private": true,
-  "jest": {
-    "preset": "jest-expo",
-    "transformIgnorePatterns": [
-      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
-    ]
-  },
-  "preset": "react-native",
-  "setupFiles": [
-    "<rootDir>/src/jest/setup.js"
-  ],
-  "setupFilesAfterEnv": [
-    "@testing-library/jest-native/extend-expect"
-  ],
-  "peerDependencies": {
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
-    "@types/react": "^17.0.0 || ^18.0.0",
-    "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0"
-  },
-  "peerDependenciesMeta": {
-    "@types/react": {
-      "optional": true
-    },
-    "@emotion/react": {
-      "optional": true
-    },
-    "@emotion/styled": {
-      "optional": true
-    }
-  }
+  "preset": "react-native"
 }
