--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-native": "0.73.4",
     "react-native-big-calendar": "^4.10.0",
+    "react-native-gesture-handler": "^2.16.1",
     "react-native-reanimated": "^3.8.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
