--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
   "server": {
-    "hostname": "https://cb3b-68-118-249-49.ngrok-free.app"
+    "hostname": "https://6c18-128-119-202-220.ngrok-free.app"
   }
 }
