--- a/package.json
+++ b/package.json
@@ -11,31 +11,31 @@
     "lint": "eslint src/ --config .eslintrc.json"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
+    "@expo/metro-runtime": "~3.2.1",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "crypto-js": "^4.2.0",
-    "expo": "~50.0.6",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.2",
+    "expo-file-system": "~17.0.1",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
     "jest": "^29.3.1",
-    "jest-expo": "~50.0.4",
-    "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0",
-    "react-native": "0.73.4",
+    "jest-expo": "~51.0.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.1",
     "react-native-big-calendar": "^4.10.0",
     "react-native-gesture-handler": "^2.16.1",
-    "react-native-reanimated": "^3.8.0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.6",
-    "socket.io-client": "^4.7.5",
-    "expo-file-system": "~16.0.9"
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^18.2.61",
+    "@types/react": "~18.2.79",
     "eslint-plugin-testing-library": "^6.2.2"
   },
   "private": true,
